# unshell

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  spec.md
docs/: repl.md  spec.md
scripts/: dump_args  expansion_handler.py  expansion_handler_invalid.py  unshell_init
src/: expand.rs  main.rs  parser.rs  repl.rs  state.rs  term.rs  workers.rs
tests/: integration.rs
tests/fixtures/: alias_assignment.ush  alias_builtin.stderr  alias_builtin.ush  alias_definition_expansion.stderr  alias_definition_expansion.stdout  alias_definition_expansion.ush  alias_in_capture.stdout  alias_in_capture.ush  alias_keywords.stdout  alias_keywords.ush  alias_lookup.stderr  alias_lookup.stdout  alias_lookup.ush  alias_pipeline.ush  alias_settings.stderr  alias_settings.stdout  alias_settings.ush  and_or.stderr  and_or.ush  assignment_quoted_value.stdout  assignment_quoted_value.ush  atomic_variables.ush  basic_echo.ush  brace_blocks.stdout  brace_blocks.ush  bracket_inline.stdout  bracket_inline.ush  bracket_spacing.stdout  bracket_spacing.ush  builtin_builtin.stderr  builtin_builtin.stdout  builtin_builtin.ush  builtin_exit.ush  capture_stderr_passthrough.stdout  capture_stderr_passthrough.ush  capture_substitution.ush  capture_trim.stdout  capture_trim.ush  capture_variables.ush  cd_builtin.stdout  (+122 more)
util/: expansion_handler.py  expansion_handler_fail.py  quote  unshell.kak  unshell_init
