[package]
name = "unshell"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ush"
path = "src/main.rs"

[dependencies]
libc = "0.2"
rustyline = { version = "17.0.1", optional = true, features = ["derive", "custom-bindings"] }

[features]
default = ["repl"]
repl = ["dep:rustyline"]

[patch.crates-io]
rustyline = { path = "vendor/rustyline" }
